Blob is missing text() & arrayBuffer() operations https://bugs.webkit.org/show_bug.cgi?id=215663

Reviewed by Geoff Garen.

LayoutTests/imported/w3c:

* web-platform-tests/FileAPI/blob/Blob-array-buffer.any-expected.txt:
* web-platform-tests/FileAPI/blob/Blob-array-buffer.any.worker-expected.txt:
* web-platform-tests/FileAPI/blob/Blob-text.any-expected.txt:
* web-platform-tests/FileAPI/blob/Blob-text.any.worker-expected.txt:
* web-platform-tests/FileAPI/idlharness-expected.txt:
* web-platform-tests/FileAPI/idlharness.worker-expected.txt:

Source/WebCore:

Implementation support for Blob.text() & Blob.arrayBuffer() as per specification:
- https://w3c.github.io/FileAPI/#blob-section

The implementation relies on the pre-existing BlobLoader class but the following
changes were made:
- Stop calling start() in the BlobLoader constructor and have the caller call
  start() explicitly after constructing the BlobLoader. This is important because
  the load may fail synchronously in some cases.
- Add support for reading Blob as text. Previously, BlobLoader would only support
  reading the blob as an ArrayBuffer.
- Use a CompletionHandler instead of a Function and make sure that it is always
  called.

No new tests, rebaselined existing tests.

* fileapi/Blob.cpp:
(WebCore::Blob::~Blob):
(WebCore::Blob::loadBlob):
(WebCore::Blob::text):
(WebCore::Blob::arrayBuffer):
* fileapi/Blob.h:
* fileapi/Blob.idl:
* fileapi/BlobLoader.h:
(WebCore::BlobLoader::BlobLoader):
(WebCore::BlobLoader::~BlobLoader):
(WebCore::BlobLoader::cancel):
(WebCore::BlobLoader::start):
(WebCore::BlobLoader::didFinishLoading):
(WebCore::BlobLoader::didFail):
(WebCore::BlobLoader::complete): Deleted.
* fileapi/NetworkSendQueue.cpp:
(WebCore::NetworkSendQueue::enqueue):
(WebCore::NetworkSendQueue::clear):
(WebCore::NetworkSendQueue::processMessages):
* page/ShareDataReader.cpp:
(WebCore::ShareDataReader::start):
(WebCore::ShareDataReader::didFinishLoading):
(WebCore::ShareDataReader::cancel):


Canonical link: https://commits.webkit.org/228429@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265908 268f45cc-cd09-0410-ab3c-d52691b4dbfc